pamc/src/tests/sample_code/should_fail/scope/duplicate_type_params.ph
type U(T: Type, T: Type) {}
